flowc/tests/fixtures/resolve_e129_self_recursion.flow
flow loop_forever(seed: int) -> int {
  loop_forever(seed)
}
